--- a/PyPokerGUI/pypokergui/server/templates/waiting_room.html
+++ b/PyPokerGUI/pypokergui/server/templates/waiting_room.html
@@ -13,12 +13,14 @@
       <input type="hidden" name="next" value="{{ request.path }}">
       {% module xsrf_form_html() %}
     </form>
+    <div >
     <form action="/a/start_game" method="post" id="start_game_form">
       <div class="form-group"><!-- need this element for margin --></div>
       <input type="submit" value="{{ _("Start Poker") }}" class="btn btn-success">
       <input type="hidden" name="next" value="{{ request.path }}">
       {% module xsrf_form_html() %}
     </form>
+  </div>
   </div>
   <div></div> <!-- for adding space -->
 </div>
